exercice3/ingress/echoheaders-y-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: echoheaders
  name: echoheaders-y
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    run: echoheaders
  type: ClusterIP
