exercice3/ingress/ingress.yaml
# An Ingress with 2 hosts and 3 endpoints
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echomap
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.allow-http: "false"
    #ingress.kubernetes.io/whitelist-source-range: "1.1.1.1/24"
    #ingress.kubernetes.io/upstream-fail-timeout: "30"

    #ingress.kubernetes.io/auth-type: basic
    #ingress.kubernetes.io/auth-secret: basic-auth
    #ingress.kubernetes.io/auth-realm: "Authentication Required - foo"
spec:
  rules:
  - host: foo.domain.com
    http:
      paths:
      - path: /foo
        backend:
          serviceName: echoheaders-x
          servicePort: 80
  - host: bar.domain.com
    http:
      paths:
      - path: /bar
        backend:
          serviceName: echoheaders-y
          servicePort: 80
      - path: /foo
        backend:
          serviceName: echoheaders-x
          servicePort: 80
  tls:
  - hosts:
    - foo.domain.com
    - bar.domain.com
    secretName: foobar-tls
